# simple

./: .gitignore  pyproject.toml
src/jve_simple/: main.py
